--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "devDependencies": {
-    "@swc/cli": "^0.4.1-nightly.20240914",
-    "@swc/core": "^1.7.40",
-    "@swc/jest": "^0.2.36",
-    "@types/jest": "^29.5.14",
-    "jest": "^29.7.0",
-    "ts-node": "^10.9.2",
-    "tslint": "^5.20.1",
-    "tslint-config-airbnb": "^5.11.2",
-    "typescript": "^5.6.3"
-  },
-  "scripts": {
-    "test": "jest"
-  }
+	"devDependencies": {
+		"@swc/cli": "^0.4.1-nightly.20240914",
+		"@swc/core": "^1.7.40",
+		"@swc/jest": "^0.2.36",
+		"@types/jest": "^29.5.14",
+		"jest": "^29.7.0",
+		"ts-node": "^10.9.2",
+		"tslint": "^5.20.1",
+		"tslint-config-airbnb": "^5.11.2",
+		"typescript": "^5.6.3"
+	},
+	"scripts": {
+		"test": "npm run tsc -- --noEmit && jest",
+		"tsc": "tsc"
+	}
 }
